# xs_h3

./: API_REFERENCE.md  Cargo.toml  README.USAGE.md  README.md
benches/: indexing_benches.rs  polyfill_benches.rs
examples/: basic_indexing.rs  cell_measures.rs  cell_traversal.rs  k_ring_example.rs  polyfill_example.rs  uncompact_compact.rs
src/: base_cells.rs  bbox.rs  constants.rs  iterators.rs  latlng.rs  lib.rs  local_ij.rs  measures.rs  polygon.rs  types.rs
src/coords/: face_ijk.rs  ijk.rs  mod.rs
src/h3_index/: inspection.rs  mod.rs  string_conv.rs
src/hierarchy/: compaction.rs  mod.rs  parent_child.rs
src/indexing/: from_h3.rs  mod.rs  to_h3.rs
src/math/: extensions.rs  mod.rs  vec2d.rs  vec3d.rs
src/regions/: mod.rs  polyfill.rs  to_polygon.rs
src/traversal/: distance.rs  grid_disk.rs  grid_path.rs  mod.rs  neighbors.rs
tests/: grid_path_internal_tests.rs  h3_properties_tests.rs  hierarchy_tests.rs  indexing_tests.rs  serde_tests.rs  traversal_tests.rs
