[package]
name = "xs_h3"
version = "0.1.0"
authors = ["Excerion Sun <dev@excsn.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Excerion Sun's Rust implementation of Uber's H3 geospatial indexing library"
repository = "https://github.com/excsn/xs_h3" # Replace with your repo
readme = "README.md"
keywords = ["h3", "geospatial", "gis", "index", "uber"]
categories = ["algorithms", "data-structures", "science::geo"]

[dependencies]
# smallvec = { version = "1.11", features = ["const_generics"] } # For CellBoundary if optimizing stack allocation later
# cfg-if = "1.0" # For conditional compilation (e.g., no_std features)

[dev-dependencies]
# criterion = { version = "0.5", features = ["html_reports"] } # For benchmarking later
# proptest = "1.2" # For property-based testing later

[features]
# default = []
# serde = ["dep:serde"] # Example for serde support later

# [[dependency.serde]] # If enabling serde feature
# version = "1.0"
# optional = true